<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xcoaching.exanii.simulator.activities.XCoachingExaniiSimulator$PlaceholderFragment" >    
    
     <TextView
        android:id="@+id/welcome_msg_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"               
        android:gravity="center_horizontal"
        android:text="@string/exanii_simulator_welcome_msg_title_text"
        android:textSize="@dimen/exanii_simulator_medium_title_size"
        android:textStyle="bold" />    
    
    <LinearLayout
            android:id="@+id/welcome_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">           
        
        <Button
            android:id="@+id/welcome_msg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayInstructions"
            android:text="@string/exanii_simulator_continue_button_text"
            android:textSize="@dimen/exanii_simulator_button_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/welcome_scrollable_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/welcome_buttons"
        android:layout_below="@id/welcome_msg_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">                

          <TextView
              android:id="@+id/welcome_msg_body"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:text="@string/exanii_simulator_welcome_msg_body_text"
              android:textSize="@dimen/exanii_simulator_welcome_msg_body_size" />
          
        </LinearLayout>
    
    </ScrollView>
    
</RelativeLayout>
